--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,8 +1,8 @@
 name: "Deploy Docs"
 
 on:
-  push:
-    branches: [master]
+  push: {}  # fixme
+    # branches: [master]
 
 jobs:
   # https://github.com/marketplace/actions/deploy-to-github-pages
@@ -30,8 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt -U -f https://download.pytorch.org/whl/cpu/torch_stable.html -q --use-feature=2020-resolver
-          pip install -r docs/requirements.txt --use-feature=2020-resolver
+          pip install -r docs/requirements.txt
           # install Texlive, see https://linuxconfig.org/how-to-install-latex-on-ubuntu-20-04-focal-fossa-linux
           sudo apt-get update
           sudo apt-get install -y texlive-latex-extra dvipng texlive-pictures
