--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           pip install -r requirements/docs.txt
           # install Texlive, see https://linuxconfig.org/how-to-install-latex-on-ubuntu-20-04-focal-fossa-linux
-          sudo apt-get update
+          sudo apt-get update -y
           sudo apt-get install -y texlive-latex-extra dvipng texlive-pictures
           python --version
           pip --version
