--- a/conf/dataset/nlp/hf_default.yaml
+++ b/conf/dataset/nlp/hf_default.yaml
@@ -14,3 +14,6 @@ cfg:
   preprocessing_num_workers: 1
   load_from_cache_file: True
   max_length: 128
+  limit_train_samples: null
+  limit_val_samples: null
+  limit_test_samples: null
