--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytorch-lightning>=1.0.0
+pytorch-lightning>=1.1.0
 torch>=1.6
 
 # extras
@@ -13,3 +13,4 @@ hydra-core>=1.1.0.dev2 # todo: swap to 1.1 version once out
 
 # task-specific
 rouge-score
+sentencepiece
