--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -58,6 +58,7 @@ jobs:
       run: |
         pip install --requirement requirements.txt --upgrade --quiet --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
         pip install --requirement requirements/test.txt --quiet
+        pip install .
         python --version
         pip --version
         pip list
