--- a/conf/optimizer/deepspeed/adamw.yaml
+++ b/conf/optimizer/deepspeed/adamw.yaml
@@ -1,6 +1,5 @@
-type: AdamW
-params:
-  lr: ${training.lr}
-  betas: [ 0.8, 0.999 ]
-  eps: 1e-8
-  weight_decay: 3e-7
+_target_: deepspeed.ops.adam.FusedAdam
+lr: ${training.lr}
+betas: [ 0.8, 0.999 ]
+eps: 1e-8
+weight_decay: 3e-7
