--- a/conf/optimizer/deepspeed/cpu_adam.yaml
+++ b/conf/optimizer/deepspeed/cpu_adam.yaml
@@ -1,6 +1,5 @@
-_target_: deepspeed.ops.adam.FusedAdam
+_target_: deepspeed.ops.adam.DeepSpeedCPUAdam
 lr: ${training.lr}
 betas: [ 0.8, 0.999 ]
 eps: 1e-8
 weight_decay: 3e-7
-adam_w_mode: False
