--- a/conf/optimizer/deepspeed/onebitadam.yaml
+++ b/conf/optimizer/deepspeed/onebitadam.yaml
@@ -1,8 +1,7 @@
-type: OneBitAdam
-params:
-  lr: 0.001
-  betas: [0.8, 0.999]
-  eps: 1e-8
-  weight_decay: 3e-7
-  freeze_step: 400
-  cuda_aware: True
+_target_: deepspeed.ops.adam.OnebitAdam
+lr: ${training.lr}
+betas: [ 0.8, 0.999 ]
+eps: 1e-8
+weight_decay: 3e-7
+freeze_step: 400
+cuda_aware: True
