--- a/conf/backbone/nlp/default.yaml
+++ b/conf/backbone/nlp/default.yaml
@@ -1,4 +1,4 @@
 # @package backbone
 defaults:
-  - /tokenizer@_group_: default # use AutoTokenizer by default
+  - /tokenizer@_group_: autotokenizer # use AutoTokenizer by default
 pretrained_model_name_or_path: bert-base-cased
