--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,10 @@ NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false
 
 
 [isort]
+known_first_party =
+    lightning_transformers
+    tests
+    examples
 profile = "google"
 line_length = 120
 force_sort_within_sections = false
